7. Adding Meals Detail View

--- a/meals/templates/Meals/list.html
+++ b/meals/templates/Meals/list.html
@@ -1,5 +1,5 @@
 <h2>Meals List</h2>
 
 {% for meal in meal_list %}
-  <h3>{{ meal }}</h3>
+  <h3><a href="{% url 'meals:meal_detail' meal.slug %}">{{ meal }}</a></h3>
 {% endfor %}
