9. Adding Templates Part 2

--- a/static/site_static/css/style.css
+++ b/static/site_static/css/style.css
@@ -1486,3 +1486,9 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+
+/* CUSTOMISE CSS*/
+
+.meal_img {
+  width: 100% !important;
+}
