--- a/meals/templates/Meals/list.html
+++ b/meals/templates/Meals/list.html
@@ -1,7 +1,9 @@
 {% extends 'base.html'%}
 
 {% block body %}
+      
       <div class="main-wrap">
+
         <div class="cover_1">
           <div class="img_bg" style="background-image: url(img/slider-1.jpg);" data-stellar-background-ratio="0.5">
             <div class="container">
@@ -14,58 +16,7 @@
           </div>
         </div> <!-- .cover_1 -->
 
-        <div class="section services-section">
-          <div class="container">
-
-            <div class="row">
-              <div class="col-md-6 col-lg-3" data-aos="fade-up">
-                <div class="media feature-icon d-block text-center">
-                  <div class="icon">
-                    <span class="flaticon-soup"></span>
-                  </div>
-                  <div class="media-body">
-                    <h3>Quality Cuisine</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-                <div class="media feature-icon d-block text-center">
-                  <div class="icon">
-                    <span class="flaticon-vegetables"></span>
-                  </div>
-                  <div class="media-body">
-                    <h3>Fresh Food</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-                <div class="media feature-icon d-block text-center">
-                  <div class="icon">
-                    <span class="flaticon-pancake"></span>
-                  </div>
-                  <div class="media-body">
-                    <h3>Friendly Staff</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="500">
-                <div class="media feature-icon d-block text-center">
-                  <div class="icon">
-                    <span class="flaticon-tray"></span>
-                  </div>
-                  <div class="media-body">
-                    <h3>Easy Reservation</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> <!-- .section -->
-
+        {% comment %}
         <div class="section">
           <div class="container">
             <div class="row justify-content-center">
@@ -76,10 +27,11 @@
             </div>
           </div>
         </div> <!-- .section -->
-
+        
         <div class="section pt-0 pb-0">
 
           <div class="menus d-flex bg-light">
+
             <div class="d-flex item">
               <div class="image" style="background-image: url(img/img_1.jpg);" data-aos="fade"></div>
               <div class="text">
@@ -104,7 +56,7 @@
                 <h3>Flatbread</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
                 <p class="price">$9.00</p>
-
+                
               </div>
             </div> <!-- .item -->
 
@@ -137,84 +89,8 @@
 
           </div>
         </div> <!-- .section -->
-
-        <div class="section" data-aos="fade">
-          <div class="container">
-            <div class="row justify-content-center text-center" data-aos="fade-up">
-              <div class="col-md-8">
-                <div class="owl-carousel home-slider-loop-false">
-
-
-                  <div class="item">
-                    <blockquote class="testimonial">
-                      <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat recusandae molestias incidunt sapiente sit numquam delectus mollitia! Non laudantium impedit voluptas consequatur corrupti. Cumque consequuntur nemo eos et error!&rdquo;</p>
-                      <div class="author">
-                        <img src="img/person_1.jpg" alt="Image placeholder" class="mb-3">
-                        <h4>Maxim Smith</h4>
-                        <p>CEO, Founder</p>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <div class="item">
-                    <blockquote class="testimonial">
-                      <p>&ldquo;Sint adipisci laborum dolorum ipsa quidem alias ipsum aperiam aut! Quis rerum soluta dolorem iure nihil velit error sequi? Dignissimos accusantium adipisci unde officia? Dolores aut sequi dolorum repellendus quod.&rdquo;</p>
-                      <div class="author">
-                        <img src="img/person_2.jpg" alt="Image placeholder" class="mb-3">
-                        <h4>Geert Green</h4>
-                        <p>CEO, Founder</p>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <div class="item">
-                    <blockquote class="testimonial">
-                      <p>&ldquo;Ratione alias iure ab facere quia aliquam dolor et voluptates esse nihil corporis distinctio hic ea quo ducimus autem cum amet. Quos accusamus iusto porro nulla temporibus numquam commodi soluta.&rdquo;</p>
-                      <div class="author">
-                        <img src="img/person_3.jpg" alt="Image placeholder" class="mb-3">
-                        <h4>Dennis Roman</h4>
-                        <p>CEO, Founder</p>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <div class="item">
-                    <blockquote class="testimonial">
-                      <p>&ldquo;Ad quod aspernatur ipsa. Numquam expedita delectus qui ad explicabo voluptas eos vel reiciendis magnam rerum quaerat quisquam accusantium quae saepe ipsam ullam ut ea molestiae porro. Recusandae veniam maxime.&rdquo;</p>
-                      <div class="author">
-                        <img src="img/person_2.jpg" alt="Image placeholder" class="mb-3">
-                        <h4>Geert Green</h4>
-                        <p>CEO, Founder</p>
-                      </div>
-                    </blockquote>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> <!-- .section -->
-
-        <div class="site-half-wrap d-block d-lg-flex">
-          <div class="block-half" data-aos="fade">
-            <div class="image-bg-fullwidth" style="background-image: url(img/img_1.jpg);"></div>
-            <div class="half d-block d-lg-flex">
-              <div class="text">
-                <h2 class="mb-4">Feature Menu</h2>
-                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eos quasi, necessitatibus dicta. Temporibus odit sed quisquam commodi, in aut, repellendus porro saepe minus, enim obcaecati fugiat optio eaque odio?</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary">View All Menu</a></p>
-              </div>
-              <div class="image" style="background-image: url(img/img_2.jpg);"></div>
-            </div>
-          </div>
-          <div class="block-half"  data-aos="fade">
-            <div class="half d-block d-lg-flex">
-              <div class="text">
-                <h2 class="mb-4">Master Chef</h2>
-                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eos quasi, necessitatibus dicta. Temporibus odit sed quisquam commodi, in aut, repellendus porro saepe minus, enim obcaecati fugiat optio eaque odio?</p><p><a href="#" class="btn btn-primary btn-outline-primary">Meet Our chef</a></p>
-              </div>
-              <div class="image" style="background-image: url(img/chef_1.jpg);"></div>
-            </div>
-            <div class="image-bg-fullwidth" style="background-image: url(img/chef_2.jpg);"></div>
-          </div>
-        </div>
-
+        {% endcomment %}
+      
         <div class="section">
           <div class="container">
             <div class="row justify-content-center">
@@ -235,16 +111,20 @@
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-breakfast" role="tabpanel" aria-labelledby="pills-breakfast-tab">
+                  
+                  {% for meal in meal_list %}  
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <h3><a href="#">Warm Spinach Dip &amp; Chips</a></h3>
-                        <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                        <h3><a href="{% url 'meals:meal_detail' meal.slug %}">{{ meal.name }}</a></h3>
+                        <p>{{ meal.description }}</p>
                       </div>
                       <div class="price order-2">
-                        <strong>$10.49</strong>
+                        <strong>${{ meal.price }}</strong>
                       </div>
                     </div> <!-- .menu-food-item -->
+                    {% endfor %}
 
+                    {% comment %}
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="#">Key Wast Machos</a></h3>
@@ -274,11 +154,11 @@
                         <strong>$13.99</strong>
                       </div>
                     </div> <!-- .menu-food-item -->
-
+                    {% endcomment %}
 
                   </div>
                   <div class="tab-pane fade" id="pills-lunch" role="tabpanel" aria-labelledby="pills-lunch-tab">
-
+                    
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="#">Jumbo Lump Crab Stack</a></h3>
@@ -321,7 +201,7 @@
 
                   </div>
                   <div class="tab-pane fade" id="pills-dinner" role="tabpanel" aria-labelledby="pills-dinner-tab">
-
+                    
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="#">Grilled Top Sirlion Steak</a></h3>
@@ -370,128 +250,6 @@
             </div>
           </div>
         </div>
-
-        <div class="section bg-light">
-          <div class="container">
-            <div class="row justify-content-center mb-5" data-aos="fade-up">
-              <div class="col-md-8  text-center">
-                <h2 class="mb-3">Events &amp; News</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="media d-block d-lg-flex mb-5"  data-aos="fade-up" data-aos-delay="100">
-                  <figure class="mr-4 horizontal">
-                    <img src="img/news_1.jpg" alt="Image placeholder" class="img-fluid">
-                  </figure>
-                  <div class="media-body">
-                    <h3><a href="#">Birthday Party Held in Diner Restaurant</a></h3>
-                    <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-                    <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                  </div>
-                </div> <!-- .media -->
-
-                <div class="media d-block d-lg-flex mb-5"  data-aos="fade-up">
-                  <figure class="mr-4 horizontal">
-                    <img src="img/news_2.jpg" alt="Image placeholder" class="img-fluid" data-aos-delay="200">
-                  </figure>
-                  <div class="media-body">
-                    <h3><a href="#">Drinks Overload</a></h3>
-                    <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-                    <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                  </div>
-                </div> <!-- .media -->
-
-                <div class="media d-block d-lg-flex mb-5"  data-aos="fade-up"  data-aos-delay="300">
-                  <figure class="mr-4 horizontal">
-                    <img src="img/img_1.jpg" alt="Image placeholder" class="img-fluid">
-                  </figure>
-                  <div class="media-body">
-                    <h3><a href="#">New Recipe: Steak Steak Steak.</a></h3>
-                    <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-                    <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                  </div>
-                </div> <!-- .media -->
-
-
-              </div> <!-- .col-md-6 -->
-
-              <div class="col-lg-6">
-                <div class="media d-block mb-5" data-aos="fade-up"  data-aos-delay="400">
-                  <figure>
-                    <a href="#"><img src="img/news_1_large.jpg" alt="Image placeholder" class="img-fluid"></a>
-                  </figure>
-                  <div class="media-body">
-                    <h3><a href="#">Food that are best for your overall health</a></h3>
-                    <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-                    <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                  </div>
-                </div> <!-- .media -->
-              </div>
-            </div>
-          </div>
-        </div> <!-- .section -->
-
-        <div class="section">
-          <div class="container">
-            <div class="row justify-content-center mb-5" data-aos="fade-up">
-              <div class="col-md-8  text-center">
-                <h2 class="mb-3">Why Choose Us</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
-              </div>
-            </div>
-            <div class="row large-gutters">
-              <div class="col-md-6"  data-aos="fade-up" data-aos-delay="200">
-                <img src="img/img_2.jpg" alt="Image placeholder" class="img-fluid rounded">
-              </div>
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                <div class="accordion" id="accordion">
-                  <div class="accordion-item">
-                    <h3 class="mb-0">
-                      <a class="btn-block p-3" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">Quality Cuisine <span class="icon"></span></a>
-                    </h3>
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                      <div class="p-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur quae cumque perspiciatis aperiam accusantium facilis provident aspernatur nisi optio debitis dolorum, est eum eligendi vero aut ad necessitatibus nulla sit labore doloremque magnam! Ex molestiae, dolor tempora, ad fuga minima enim mollitia consequuntur, necessitatibus praesentium eligendi officia recusandae culpa tempore eaque quasi ullam magnam modi quidem in amet. Quod debitis error placeat, tempore quasi aliquid eaque vel facilis culpa voluptate.</p>
-                      </div>
-                    </div>
-                  </div> <!-- .accordion-item -->
-
-                  <div class="accordion-item">
-                    <h3 class="mb-0">
-                      <a class="btn-block p-3" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">Fresh Food <span class="icon"></span></a>
-                    </h3>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                      <div class="p-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad laborum expedita. Nostrum iure atque enim quisquam minima distinctio omnis, consequatur aliquam suscipit, quidem, esse aspernatur! Libero, excepturi animi repellendus porro impedit nihil in doloremque a quaerat enim voluptatum, perspiciatis, quas dignissimos maxime ut cum reiciendis eius dolorum voluptatem aliquam!</p>
-                      </div>
-                    </div>
-                  </div> <!-- .accordion-item -->
-
-                  <div class="accordion-item">
-                    <h3 class="mb-0">
-                      <a class="btn-block p-3" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Friendly Staff  <span class="icon"></span></a>
-                    </h3>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                      <div class="p-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad laborum expedita. Nostrum iure atque enim quisquam minima distinctio omnis, consequatur aliquam suscipit, quidem, esse aspernatur! Libero, excepturi animi repellendus porro impedit nihil in doloremque a quaerat enim voluptatum, perspiciatis, quas dignissimos maxime ut cum reiciendis eius dolorum voluptatem aliquam!</p>
-                      </div>
-                    </div>
-                  </div> <!-- .accordion-item -->
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> <!-- .section -->
-
-
-
 
       </div> <!-- .main-wrap -->
 
