--- a/meals/templates/Meals/detail.html
+++ b/meals/templates/Meals/detail.html
@@ -1,11 +1,11 @@
 {% extends 'base.html'%}
-
+{% load static %}
 {% block body %}
       
       <div class="main-wrap">
 
         <div class="cover_1">
-          <div class="img_bg" style="background-image: url(img/slider-1.jpg);" data-stellar-background-ratio="0.5">
+          <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %});" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-md-12" data-aos="fade-up">
