--- a/meals/templates/Meals/list.html
+++ b/meals/templates/Meals/list.html
@@ -1,11 +1,11 @@
 {% extends 'base.html'%}
-
+{% load static %}
 {% block body %}
-      
+
       <div class="main-wrap">
 
         <div class="cover_1">
-          <div class="img_bg" style="background-image: url(img/slider-1.jpg);" data-stellar-background-ratio="0.5">
+          <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %});" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-md-12" data-aos="fade-up">
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div> <!-- .section -->
-        
+
         <div class="section pt-0 pb-0">
 
           <div class="menus d-flex bg-light">
@@ -56,7 +56,7 @@
                 <h3>Flatbread</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
                 <p class="price">$9.00</p>
-                
+
               </div>
             </div> <!-- .item -->
 
@@ -90,7 +90,7 @@
           </div>
         </div> <!-- .section -->
         {% endcomment %}
-      
+
         <div class="section">
           <div class="container">
             <div class="row justify-content-center">
@@ -111,8 +111,8 @@
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-breakfast" role="tabpanel" aria-labelledby="pills-breakfast-tab">
-                  
-                  {% for meal in meal_list %}  
+
+                  {% for meal in meal_list %}
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="{% url 'meals:meal_detail' meal.slug %}">{{ meal.name }}</a></h3>
@@ -158,7 +158,7 @@
 
                   </div>
                   <div class="tab-pane fade" id="pills-lunch" role="tabpanel" aria-labelledby="pills-lunch-tab">
-                    
+
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="#">Jumbo Lump Crab Stack</a></h3>
@@ -201,7 +201,7 @@
 
                   </div>
                   <div class="tab-pane fade" id="pills-dinner" role="tabpanel" aria-labelledby="pills-dinner-tab">
-                    
+
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
                         <h3><a href="#">Grilled Top Sirlion Steak</a></h3>
